Changes
-------

1.1.5.2 -> 1.2.0

- Rework/harmonize SQL scripts - review some data types and defaults values
- Dynamic dates are now stored using Y-m-d format only
- Dates validation is a bit stricter
- Remove photo drag'n drop

1.1.5.1 -> 1.1.5.2

- Wrong year on new contributions when using begin of membership date
- Several issues on mass groups adding
- Update German translation

1.1.5 -> 1.1.5.1

- Loop issue on new contributions when using begin of membership date
- Update TCPDF to latest version

1.1.4 -> 1.1.5

- Fixes for PHP 8.4 compatibility
- Members cannot access their invoices/receipts
- Fatal error adding contribution when no type is present
- Fix few typehint issues
- Mass add/remove members from groups
- Use previous begin of membership date for new contributions

1.1.3 -> 1.1.4

- Groups managers can add or list contributions and transactions (from a preference)
- Install from command line
- Improve dashboard
- Activate choice after member creation for groups managers
- Revert PDF member card to previous version, new adaptative one is optional
- Fix PDF footer overlaps
- Notify members when groups managers edit their account
- Preferences socials networks were removed on telemetry update
- Special HTML character are encoded on members search, therefore no results are found
- Begin membership date changes on keyboard browse
- Improve Preferences checks for membership extension/date
- Cannot remove emails from emails management
- Force image crop in preferences does not work
- Display PHP startup messages on error page
- Display max_input_vars configuration on sys info page
- Fix SQL issue with postgres searching on dynamic dates

1.1.2 -> 1.1.3

- Impossible to update database

1.1.1 -> 1.1.2

- Do not display links to public documents page if public pages are not enabled
- Fix info message display on new release
- Fix typehint issues on dynamic fields
- Check for possible null from DB converted to int
- Fix member search on contribution type